Updated the More page

--- a/more.html
+++ b/more.html
@@ -1,13 +1,13 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Threads of Minds | More Ways to Help</title>
-  <meta name="description" content="Continue supporting the Alzheimer’s movement with curated organizations, donation links, and volunteer opportunities." />
+  <meta name="description" content="Continue supporting the Alzheimer's movement with curated organizations, donation links, and volunteer opportunities." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;700&family=Marck+Script&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
@@ -30,30 +30,29 @@
   </header>
 
   <main>
-    <section class="page-hero">
-      <h1>More Opportunity to Support the Cause</h1>
-      <p>Extend your impact by partnering with established Alzheimer’s organizations that fund research, support caregivers, and advocate for change.</p>
+    <section class="more-hero">
+      <p class="more-hero__kicker">More Opportunity to Support the Cause...</p>
+      <h1>Relevant Organizations</h1>
+      <p class="more-hero__script">Volunteer, donate, fundraise, etc.</p>
     </section>
 
-    <section class="section alt" id="organizations">
+    <section class="more-orgs" id="organizations">
       <div class="inner">
-        <span class="badge">Relevant organizations</span>
-        <h2>Volunteer, Donate, Fundraise</h2>
-        <div class="resources">
-          <article class="resource-card">
-            <h3>Alzheimer’s Association</h3>
-            <a href="https://www.alz.org" target="_blank" rel="noopener">alz.org</a>
-            <p>The Alzheimer’s Association is a leading nonprofit organization providing care, support, and research funding. Join fundraising teams, volunteer locally, or donate to accelerate discoveries.</p>
+        <div class="org-grid">
+          <article class="org-card">
+            <h2>Alzheimer's Association</h2>
+            <p class="org-card__link"><a href="https://www.alz.org" target="_blank" rel="noopener">alz.org</a></p>
+            <p>The Alzheimer&rsquo;s Association is a leading nonprofit organization dedicated to Alzheimer&rsquo;s care, support, and research. Help the cause via donations or volunteering!</p>
           </article>
-          <article class="resource-card">
-            <h3>AlzForum</h3>
-            <a href="https://www.alzforum.org" target="_blank" rel="noopener">alzforum.org</a>
-            <p>Since 1996, AlzForum has connected scientists through news, data, and collaborative tools that advance Alzheimer’s research worldwide.</p>
+          <article class="org-card">
+            <h2>Alzforum</h2>
+            <p class="org-card__link"><a href="https://www.alzforum.org" target="_blank" rel="noopener">alzforum.com</a></p>
+            <p>Alzforum is a news and information resource website helping scientists advance AD research since 1996.</p>
           </article>
-          <article class="resource-card">
-            <h3>Alzheimer Society of Canada</h3>
-            <a href="https://alzheimer.ca" target="_blank" rel="noopener">alzheimer.ca</a>
-            <p>The Alzheimer Society of Canada offers education, support services, and advocacy for people affected by dementia across the country. Discover volunteer roles and donation opportunities.</p>
+          <article class="org-card">
+            <h2>Alzheimer Society (Canada)</h2>
+            <p class="org-card__link"><a href="https://alzheimer.ca" target="_blank" rel="noopener">alzheimer.ca</a></p>
+            <p>The Alzheimer Society of Canada is a national organization that supports individuals affected by Alzheimer&rsquo;s disease and other dementias in Canada. Donate and volunteer now!</p>
           </article>
         </div>
       </div>
@@ -65,7 +64,7 @@
       <div class="footer-grid">
         <div>
           <h3>Threads of Minds Canada</h3>
-          <p>Founded in 2024 by London, Ontario students determined to protect families from Alzheimer’s disease through education, creativity, and community outreach.</p>
+          <p>Founded in 2024 by London, Ontario students determined to protect families from Alzheimer's disease through education, creativity, and community outreach.</p>
           <div class="footer-nav">
             <a href="index.html">Home</a>
             <a href="info.html">Info</a>
@@ -83,7 +82,7 @@
           <small>By sharing your email you agree to receive occasional updates from Threads of Minds.</small>
         </div>
       </div>
-      <div class="small-print">© 2025 Threads of Minds. <a href="#">Terms &amp; Conditions</a> · <a href="#">Privacy Policy</a></div>
+      <div class="small-print">&copy; 2025 Threads of Minds. <a href="#">Terms &amp; Conditions</a> &middot; <a href="#">Privacy Policy</a></div>
     </div>
   </footer>
 </body>
