--- a/about.html
+++ b/about.html
@@ -23,9 +23,6 @@
         <a href="about.html" aria-current="page">About</a>
         <a href="more.html">More</a>
       </nav>
-      <div class="nav-cta">
-        <a class="button" href="https://www.alz.org/donate" target="_blank" rel="noopener">Donate</a>
-      </div>
     </div>
   </header>
 
@@ -100,14 +97,8 @@
           <p>Email: <a href="mailto:threadsofminds@gmail.com">threadsofminds@gmail.com</a></p>
           <p>Tel: <a href="tel:2265031785">226-503-1785</a></p>
         </div>
-        <div class="newsletter">
-          <label for="newsletter-about">Receive news on our mission and updates</label>
-          <input type="email" id="newsletter-about" name="newsletter-about" placeholder="Email address" />
-          <button type="button" class="button">Subscribe Now</button>
-          <small>By sharing your email you agree to receive occasional updates from Threads of Minds.</small>
-        </div>
       </div>
-      <div class="small-print">© 2025 Threads of Minds. <a href="#">Terms &amp; Conditions</a> · <a href="#">Privacy Policy</a></div>
+      <div class="small-print">&copy; 2025 Threads of Minds. <a href="terms.html">Terms &amp; Conditions</a> &middot; <a href="privacy.html">Privacy Policy</a></div>
     </div>
   </footer>
 </body>
