Privacy Policy page update. Favicon added.

--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Threads of Minds | Terms &amp; Conditions</title>
-  <meta name="description" content="How to support Threads of Minds through donations and local Alzheimer’s initiatives." />
+  <meta name="description" content="Donate to organizations supporting Alzheimer's research and community awareness." />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon.png" />
+  <link rel="apple-touch-icon" href="assets/images/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;700&family=Marck+Script&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -30,7 +32,7 @@
     <section class="terms-hero">
       <div class="inner">
         <h1>Donate...</h1>
-        <p>to relevant organizations that help Alzheimer’s patients directly and fund research into treatments and cures.</p>
+        <p>to relevant organizations that help Alzheimer's patients directly and research about treatments and cures.</p>
         <a class="button" href="https://www.alz.org/donate" target="_blank" rel="noopener">Go</a>
       </div>
     </section>
@@ -38,7 +40,7 @@
     <section class="section alt">
       <div class="inner terms-content">
         <h2>Or...</h2>
-        <p>seek opportunities to help out with your local Alzheimer’s and dementia associations. Share time, amplify awareness campaigns, and support caregivers in your community.</p>
+        <p>seek opportunities to help out with your local Alzheimer's/dementia associations!</p>
         <div class="terms-callout">WE NEED YOUR HELP TO SPREAD THE MESSAGE OF OUR CAMPAIGN!</div>
       </div>
     </section>
@@ -49,7 +51,7 @@
       <div class="footer-grid">
         <div>
           <h3>Threads of Minds Canada</h3>
-          <p>Founded in 2024 by London, Ontario students determined to protect families from Alzheimer’s disease through education, creativity, and community outreach.</p>
+          <p>Founded in 2024 by London, Ontario students determined to protect families from Alzheimer's disease through education, creativity, and community outreach.</p>
           <div class="footer-nav">
             <a href="index.html">Home</a>
             <a href="info.html">Info</a>
