--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Threads of Minds | Privacy Policy</title>
   <meta name="description" content="Read how Threads of Minds collects, uses, and safeguards information across our website and services." />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon.png" />
+  <link rel="apple-touch-icon" href="assets/images/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;700&family=Marck+Script&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
